tests/neg-custom-args/captures/class-level-attack.check
-- Error: tests/neg-custom-args/captures/class-level-attack.scala:12:24 ------------------------------------------------
12 |  val r: Ref[IO^] = Ref[IO^](io) // error:
   |                        ^^^
   |                        Type variable X of constructor Ref cannot be instantiated to IO^ since
   |                        that type captures the root capability `cap`.
   |
   |                        where:    ^ refers to the universal root capability
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/class-level-attack.scala:17:26 ---------------------------
17 |  def set(x: IO^) = r.put(x)  // error
   |                          ^
   |                          Found:    IO^{x}
   |                          Required: IO^
   |
   |                          Note that capability x is not included in capture set {cap}
   |                          because (x : IO^²) in method set is not visible from cap in value r.
   |
   |                          where:    ^ and cap refer to a fresh root capability in the type of value r
   |                                    ^²        refers to a fresh root capability in the type of parameter x
   |
   | longer explanation available when compiling with `-explain`
